--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
         .tombol:hover {
             transform: scale(1.2);
+            transition: ease-in-out 0.3s;
             background-color: #ffffff;
             color: #000;
         }
@@ -114,8 +115,8 @@
 <body>
     <div>
         <h1>Happy Valentine's Day! ❤️</h1>
-        <p>15 Februari 2025, from Lorem to Ipsum</p>
-        <a href="index2.html" class="tombol">Click Here!</a>
+        <p>14 Februari 2025, from Aku to Kamu</p>
+        <a href="index2.html" class="tombol">Klik Yaa!</a>
     </div>
 
     <!-- Animasi Hati -->
