--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://i.ibb.co.com/hXZsYxZ/heart.png">
-    <title>hey, this is for u Lorem Ipsum</title>
+    <title>hey, this is for u My Baby</title>
 </head>
 
 <body>
@@ -39,7 +39,6 @@
             <p class="text-right">always <3. </p>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 
 </html>
